[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/kenney_prototypes/assets/colors/dark/materials/material_001.tres" type="Material" id=1]
[ext_resource path="res://scripts/playercontroller_rework.tscn" type="PackedScene" id=2]
[ext_resource path="res://font/KGHAPPYSolid.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/kenney_prototypes/assets/cube/cube.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/dummy_hitboxes.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/kenney_prototypes/assets/colors/red/materials/material_009.tres" type="Material" id=6]
[ext_resource path="res://addons/kenney_prototypes/assets/colors/light/materials/material_009.tres" type="Material" id=7]
[ext_resource path="res://interface/basic/PNG/grey_button02.png" type="Texture" id=8]
[ext_resource path="res://map/dev_testing.gd" type="Script" id=9]

[sub_resource type="ProceduralSky" id=2]
sky_top_color = Color( 0.505882, 0.682353, 0.776471, 1 )
sky_horizon_color = Color( 0.6, 0.647059, 0.686275, 1 )
sun_latitude = 44.0
sun_longitude = -135.0

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 2 )
fog_color = Color( 0.54902, 0.552941, 0.603922, 1 )
fog_depth_end = 150.0
fog_depth_curve = 0.732043

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.5, 1.5, 1.5 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.75, 23.25, 7 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, -1, 28.5, 15.5 )
shadow_enabled = true

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.5, 24.5, 4.5 )
layers = 3
light_color = Color( 1, 0.780392, 0.47451, 1 )
light_energy = 2.333
shadow_enabled = true
omni_range = 7.711

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5, 26, -5.75 )
layers = 3
light_color = Color( 1, 0.780392, 0.47451, 1 )
light_energy = 2.333
shadow_enabled = true
omni_range = 7.711

[node name="OmniLight3" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.25, 23.5, -0.25 )
layers = 3
light_color = Color( 1, 0.47451, 0.47451, 1 )
omni_range = 7.711

[node name="CSGCombiner3" type="CSGCombiner" parent="."]
calculate_tangents = false
use_collision = true

[node name="CSGBox11" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.5, 27.5, 5 )
width = 11.0
height = 1.0
depth = 14.0
material = ExtResource( 1 )

[node name="CSGBox14" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, -3, 24.25, 13.25 )
width = 1.0
height = 1.0
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox22" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, -4, 24.5, 13.25 )
width = 1.0
height = 1.0
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox23" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, -5, 24.75, 13.25 )
width = 1.0
height = 1.0
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox24" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, -6, 25, 13.25 )
width = 1.0
height = 1.0
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox25" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, -7, 25.25, 13.25 )
width = 1.0
height = 1.0
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox26" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, -8, 25.5, 13.25 )
width = 1.0
height = 1.0
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox27" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, -9, 25.75, 13.25 )
width = 1.0
height = 1.0
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox15" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, -2, 24, 13.25 )
width = 1.0
height = 1.0
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox16" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, -1, 23.75, 13.25 )
width = 1.0
height = 1.0
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox17" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, 0, 23.5, 13.25 )
width = 1.0
height = 1.0
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox18" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, 1, 23.25, 13.25 )
width = 1.0
height = 1.0
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox19" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, 2, 23, 13.25 )
width = 1.0
height = 1.0
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox20" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, 3, 23, 13.25 )
width = 1.0
height = 0.5
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox30" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 6, 22.5, 15 )
width = 1.0
height = 1.0
depth = 1.0
material = ExtResource( 1 )

[node name="CSGBox31" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 5, 22.5, 15 )
width = 1.0
height = 1.0
depth = 1.0
material = ExtResource( 1 )

[node name="CSGBox32" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 5, 23.5, 15 )
width = 1.0
height = 1.0
depth = 1.0
material = ExtResource( 1 )

[node name="CSGBox33" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4, 23.5, 15 )
width = 1.0
height = 1.0
depth = 1.0
material = ExtResource( 1 )

[node name="CSGBox34" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4, 22.5, 15 )
width = 1.0
height = 1.0
depth = 1.0
material = ExtResource( 1 )

[node name="CSGBox35" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4, 24.5, 15 )
width = 1.0
height = 1.0
depth = 1.0
material = ExtResource( 1 )

[node name="CSGBox21" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, 4, 22.75, 13.25 )
width = 1.0
height = 0.5
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox28" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, 5, 22.5, 13.25 )
width = 1.0
height = 0.5
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox29" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, -1.06581e-14, 0, 1, 0, 1.06581e-14, 0, 1, 6, 22.25, 13.25 )
width = 1.0
height = 0.5
depth = 2.5
material = ExtResource( 1 )

[node name="CSGBox8" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.5, 24.5, 11.5 )
width = 11.0
height = 5.0
depth = 1.0
material = ExtResource( 1 )

[node name="CSGBox10" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.5, 24.5, -1.5 )
width = 9.0
height = 5.0
depth = 1.0
material = ExtResource( 1 )

[node name="CSGBox9" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -18.5, 24.5, 4.5 )
width = 13.0
height = 5.0
depth = 1.0
material = ExtResource( 1 )

[node name="CSGBox12" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -8.5, 24.5, 4.5 )
width = 13.0
height = 5.0
depth = 1.0
material = ExtResource( 1 )

[node name="CSGBox13" type="CSGBox" parent="CSGCombiner3"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -8.5, 23, 8.5 )
operation = 2
depth = 1.23296
material = ExtResource( 1 )

[node name="CSGCylinder" type="CSGCylinder" parent="CSGCombiner3"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -8.5, 24, 8.5 )
operation = 2
height = 1.11215
material = ExtResource( 1 )

[node name="CSGCombiner2" type="CSGCombiner" parent="."]
calculate_tangents = false
use_collision = true

[node name="CSGBox10" type="CSGBox" parent="CSGCombiner2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.5, -1.5, -1.5 )
width = 17.0
height = 1.0
depth = 45.0
material = ExtResource( 1 )

[node name="CSGBox12" type="CSGBox" parent="CSGCombiner2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -1.5, -9.5 )
width = 16.0
height = 1.0
depth = 45.0
material = ExtResource( 1 )

[node name="CSGBox11" type="CSGBox" parent="CSGCombiner2"]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 7.5, -1.5, -3 )
height = 1.0
depth = 45.0
material = ExtResource( 1 )

[node name="CSGBox8" type="CSGBox" parent="CSGCombiner2"]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -8.5, 5, -6 )
width = 8.0
height = 1.0
depth = 58.0
material = ExtResource( 1 )

[node name="CSGBox9" type="CSGBox" parent="CSGCombiner2"]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 7.5, 5, -6.5 )
width = 5.0
height = 1.0
depth = 58.0
material = ExtResource( 1 )

[node name="CSGCombiner" type="CSGCombiner" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 22, 0 )
calculate_tangents = false
use_collision = true

[node name="CSGBox" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 9, 13 )
width = 85.0
height = 20.0
depth = 49.0
material = ExtResource( 1 )

[node name="CSGBox7" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 9, 13.5 )
operation = 2
width = 83.0
height = 18.0
depth = 45.0
material = ExtResource( 1 )

[node name="CSGBox2" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, -8.5, -6.5 )
height = 1.0
depth = 5.0
material = ExtResource( 1 )

[node name="CSGBox6" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, -9, -6.5 )
height = 1.0
depth = 5.0
material = ExtResource( 1 )

[node name="CSGBox3" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -16.5, -6.5 )
width = 3.0
height = 1.0
depth = 5.0
material = ExtResource( 1 )

[node name="CSGBox4" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -23, -6.5 )
width = 3.0
height = 1.0
depth = 5.0
material = ExtResource( 1 )

[node name="CSGBox5" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -45.5, -5.5 )
width = 15.0
height = 1.0
depth = 7.0
material = ExtResource( 1 )

[node name="CSGBox8" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -0.5, -5.5 )
operation = 2
width = 15.0
height = 2.73522
depth = 7.0
material = ExtResource( 1 )

[node name="dummySpawn" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.75, 22, -8.5 )

[node name="Label3D3" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.75, 24.5, -4 )
pixel_size = 0.0025
billboard = 2
text = "Enemy Damage +
Hitmarker Test"
font = SubResource( 1 )

[node name="Label3D5" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 24.5, -4 )
pixel_size = 0.0025
billboard = 2
text = "Enemy Hitboxes
Test"
font = SubResource( 1 )

[node name="Label3D6" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 25, -4 )
pixel_size = 0.0025
billboard = 2
text = "(see console output)"
font = SubResource( 1 )

[node name="BtnArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.25, 23, -0.25 )

[node name="CollisionShape" type="CollisionShape" parent="BtnArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 4 )

[node name="interactPrompt" type="Spatial" parent="BtnArea"]

[node name="interactText" type="Label3D" parent="BtnArea/interactPrompt"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.5, 0 )
pixel_size = 0.001
billboard = 1
text = "[F] Respawn"
font = SubResource( 1 )

[node name="interactBG" type="Sprite3D" parent="BtnArea/interactPrompt"]
transform = Transform( 0, 0, -1, 0, 1, 0, 1, 0, 0, 0, 0.5, 0 )
opacity = 0.03
pixel_size = 0.0035
billboard = 1
texture = ExtResource( 8 )

[node name="Label3D4" type="Label3D" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 12.25, 24.5, -0.25 )
pixel_size = 0.0025
billboard = 2
text = "Interactions Test"
font = SubResource( 1 )

[node name="ButtonModel" type="CSGCombiner" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.25, 23, -0.25 )
use_collision = true

[node name="CSGBox" type="CSGBox" parent="ButtonModel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
width = 1.0
height = 1.0
depth = 1.0
material = ExtResource( 7 )

[node name="CSGBox2" type="CSGBox" parent="ButtonModel"]
width = 0.5
height = 0.5
depth = 0.5
material = ExtResource( 6 )

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 24.5, -4 )
pixel_size = 0.0025
billboard = 2
text = "Fall Damage +
Fall Anim Test"
font = SubResource( 1 )

[node name="Label3D2" type="Label3D" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7, 24.5, 6 )
pixel_size = 0.0025
billboard = 2
text = "Lighting + Shadows
Test"
font = SubResource( 1 )

[node name="Cube" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -15.5, 22, 5.5 )

[node name="Cube2" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -13, 24, 1 )

[node name="KinematicBody" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 23, -8.5 )

[connection signal="body_entered" from="BtnArea" to="." method="BtnArea_body_entered"]
[connection signal="body_exited" from="BtnArea" to="." method="BtnArea_body_exited"]
